--- a/layers/shared/nodejs/package.json
+++ b/layers/shared/nodejs/package.json
@@ -1,4 +1,8 @@
 {
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=9.0.0"
+  },
   "dependencies": {
     "dateUtils": "file:dateUtils.js",
     "utils": "file:utils.js"
