--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "local:jobcodes": "npm run build && sam local invoke JobcodesFunction -e jobcodes/event.json",
     "local:pto-balances": "npm run build && sam local invoke PTOBalancesFunction -e pto-balances/event.json",
     "local:monthly-hours": "npm run build && sam local invoke MonthlyHoursFunction -e monthly-hours/event.json",
+    "outdated": "npm outdated; npm run outdated:layers",
+    "outdated:layers": "cd layers/dependencies/nodejs && npm outdated",
     "package:dev": "sam package --region us-east-1 --s3-bucket case-consulting-sam-deployments-dev --s3-prefix mysterio-dev --output-template-file packaged.yaml",
     "package:test": "sam package --region us-east-1 --s3-bucket case-consulting-sam-deployments-dev --s3-prefix mysterio-test --output-template-file packaged.yaml",
     "package:prod": "sam package --region us-east-1 --s3-bucket case-consulting-sam-deployments-prod --s3-prefix mysterio-prod --output-template-file packaged.yaml --profile prod",
-    "reinstall": "npm ci && (cd layers/dependencies/nodejs && npm ci) && (cd layers/shared/nodejs && npm ci)",
+    "reinstall": "npm ci && npm run reinstall:layers",
+    "reinstall:layers": "(cd layers/dependencies/nodejs && npm ci) && (cd layers/shared/nodejs && npm ci)",
     "tail:dev:basecamp-token": "sam logs -n BasecampTokenFunction --stack-name mysterio-dev --tail",
     "tail:dev:jobcodes": "sam logs -n JobcodesFunction --stack-name mysterio-dev --tail",
     "tail:dev:pto-balances": "sam logs -n PTOBalancesFunction --stack-name mysterio-dev --tail",
