--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "local:basecamp-token": "npm run build && sam local invoke BasecampTokenFunction -e basecamp-token/event.json",
     "outdated": "npm outdated; npm run outdated:layers",
     "outdated:layers": "cd layers/dependencies/nodejs && npm outdated",
-    "package:dev": "sam package --region us-east-1 --s3-bucket case-consulting-sam-deployments-dev --s3-prefix mysterio-dev --output-template-file packaged.yaml",
-    "package:test": "sam package --region us-east-1 --s3-bucket case-consulting-sam-deployments-dev --s3-prefix mysterio-test --output-template-file packaged.yaml",
-    "package:prod": "sam package --region us-east-1 --s3-bucket case-consulting-sam-deployments-prod --s3-prefix mysterio-prod --output-template-file packaged.yaml --profile prod",
+    "package:dev": "sam package --region us-east-1 --s3-bucket case-expense-app-deployments-dev --s3-prefix sam --output-template-file packaged.yaml",
+    "package:test": "sam package --region us-east-1 --s3-bucket case-expense-app-deployments-test --s3-prefix sam --output-template-file packaged.yaml",
+    "package:prod": "sam package --region us-east-1 --s3-bucket case-consulting-expense-app-deployments-prod --s3-prefix sam --output-template-file packaged.yaml --profile prod",
     "reinstall": "npm ci && npm run reinstall:layers",
     "reinstall:layers": "(cd layers/dependencies/nodejs && npm install && npm ci) && (cd layers/shared/nodejs && npm install && npm ci)",
     "tail:dev:basecamp-token": "sam logs -n BasecampTokenFunction --stack-name mysterio-dev --tail",
