POR-2744: change prefixes and keys of deployment scripts

--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "scripts": {
     "build": "sam build -t CloudFormation.yaml",
     "deploy:dev": "npm run build && npm run package:dev && npm run deploy:packaged:dev",
-    "deploy:packaged:dev": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments-dev --s3-prefix mysterio-dev --stack-name mysterio-dev --parameter-overrides Stage=dev",
+    "deploy:packaged:dev": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-expense-app-deployments-dev --s3-prefix sam --stack-name mysterio-dev --parameter-overrides Stage=dev",
     "deploy:test": "npm run build && npm run package:test && npm run deploy:packaged:test",
-    "deploy:packaged:test": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments-dev --s3-prefix mysterio-test --stack-name mysterio-test --parameter-overrides Stage=test",
+    "deploy:packaged:test": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-expense-app-deployments-test --s3-prefix sam --stack-name mysterio-test --parameter-overrides Stage=test",
     "deploy:prod": "npm run build && npm run package:prod && npm run deploy:packaged:prod",
-    "deploy:packaged:prod": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-sam-deployments-prod --s3-prefix mysterio-prod --stack-name mysterio-prod --parameter-overrides Stage=prod --profile prod",
+    "deploy:packaged:prod": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-consulting-expense-app-deployments-prod --s3-prefix sam --stack-name mysterio-prod --parameter-overrides Stage=prod --profile prod",
     "local:basecamp-token": "npm run build && sam local invoke BasecampTokenFunction -e basecamp-token/event.json",
     "outdated": "npm outdated; npm run outdated:layers",
     "outdated:layers": "cd layers/dependencies/nodejs && npm outdated",
