--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "author": "CASE",
   "scripts": {
     "build": "sam build -t CloudFormation.yaml",
+    "deploy:sandbox": "npm run build && npm run package:sandbox && npm run deploy:packaged:sandbox",
+    "deploy:packaged:sandbox": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-expense-app-deployments-sandbox --s3-prefix sam --stack-name mysterio-sandbox --parameter-overrides Stage=sandbox",
     "deploy:dev": "npm run build && npm run package:dev && npm run deploy:packaged:dev",
     "deploy:packaged:dev": "sam deploy --template-file packaged.yaml --region us-east-1 --capabilities CAPABILITY_IAM CAPABILITY_NAMED_IAM --s3-bucket case-expense-app-deployments-dev --s3-prefix sam --stack-name mysterio-dev --parameter-overrides Stage=dev",
     "deploy:test": "npm run build && npm run package:test && npm run deploy:packaged:test",
@@ -17,6 +19,7 @@
     "local:basecamp-token": "npm run build && sam local invoke BasecampTokenFunction -e basecamp-token/event.json",
     "outdated": "npm outdated; npm run outdated:layers",
     "outdated:layers": "cd layers/dependencies/nodejs && npm outdated",
+    "package:sandbox": "sam package --region us-east-1 --s3-bucket case-expense-app-deployments-sandbox --s3-prefix sam --output-template-file packaged.yaml",
     "package:dev": "sam package --region us-east-1 --s3-bucket case-expense-app-deployments-dev --s3-prefix sam --output-template-file packaged.yaml",
     "package:test": "sam package --region us-east-1 --s3-bucket case-expense-app-deployments-test --s3-prefix sam --output-template-file packaged.yaml",
     "package:prod": "sam package --region us-east-1 --s3-bucket case-consulting-expense-app-deployments-prod --s3-prefix sam --output-template-file packaged.yaml --profile prod",
